Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28077

"Wrong create options" with "big_tables" option enabled

    XMLWordPrintable

Details

    Description

      After the fix in MDEV-24560, this bug appears:

      CREATE TABLE t(a VARCHAR(16383) CHARACTER SET UTF32, KEY k(a)) ENGINE=InnoDB;
      SET SESSION big_tables=ON;
      SELECT DISTINCT COUNT(DISTINCT a) FROM t;
      >>ERROR 1030 (HY000): Got error 140 "Wrong create options" from storage engine Aria
      

      Attachments

        Issue Links

          Activity

            People

              oleg.smirnov Oleg Smirnov
              oleg.smirnov Oleg Smirnov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: